@@ -14,6 +14,9 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Generate proper error if something went wrong trying to save files, instead of
+          - always displaying a message about "save" not being supported.
+
 * [DanielPharos]: Workaround for another unexpected Windows Registry key or value problem in the
           - video hardware enumeration.
 
